remove style to stop action btn not mving on mobile

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -7,10 +7,6 @@
   }
 
 .homepage-button {
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   text-align: center;
 }
 
